[package]
name = "crc-dir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
jwalk = "0.6.0"
anyhow = "1.0.58"
indicatif = "0.17.1"
clap = {version="3.2.20", features=["derive"]}
rayon = "1.5.3"
csv = "1.1.6"